--- a/views/principal.html
+++ b/views/principal.html
@@ -21,32 +21,25 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6660.35060094416!2d-70.64110096773679!3d-33.41867379272864!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2scl!4v1512475216416" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <h3 class="title-food text-center">Disfruta los mejores postres de Lima</h3>
+        <div class="">
+        <h1 id="#title"class="text-center">tenmos lo sigueinte</h1>
+        <div class="ocultar">
+          <p>jsjsjsj</p>
+        </div>
+        </div>
       </div>
     </div>
     <div class="container-fluid">
       <div class="row mrgin">
         <div class="input-group col-xs-10 center-block ">
-          <input id="search" type="text" class="form-control" aria-label="aaa" placeholder="postres" class=" ">
+          <input id="search" type="text" class="form-control" aria-label="aaa" placeholder="Elige tu postre" class=" ">
         </div>
       </div>
-
       <div class="row">
-       <div id="sample" class="col-xs-12 mg-top-25">
-
-       </div>
-
-       <div class="row">
-        <div id="sample1" class="col-xs-12 mg-top-25">
-
-        </div>
-
-        <div class="row">
-         <div id="sample1" class="col-xs-12 mg-top-25">
-
-         </div>
-    </div>
-
-
+        <div id="restaurants" class="col-xs-12 "></div>
+      </div>
+  </div>
+</body>
 
     <!--vinculando con el archivo jquery-->
     <script type="text/javascript" src="../vendors/js/jquery-3.2.1.min.js"></script>
