incorporando mensaje de ayuda

--- a/views/principal.html
+++ b/views/principal.html
@@ -16,17 +16,26 @@
         <div class="center-block">
           <img src="../assets/images/choco.gif" alt="gif" class="center-block">
         </div>
-        <h3 class="welcome text-center">Bienvenido !!!</h3>
+        <h3 class="white text-center">Bienvenido !!!</h3>
         <div class="map center-block">
           <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d6660.35060094416!2d-70.64110096773679!3d-33.41867379272864!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2scl!4v1512475216416" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
         <h3 class="title-food text-center">Disfruta los mejores postres de Lima</h3>
-        <div class="">
-        <h1 id="#title"class="text-center">tenmos lo sigueinte</h1>
-        <div class="ocultar">
-          <p>jsjsjsj</p>
+        <p class="text-center white">Deseas saber cuales son los postres <a href="#" id="question" class="text-warning">Click aqui</a></p>
+
+        <div id="answer" class="message center-block text-center">
+          <p>helados</p>
+          <p>cupcakes</p>
+          <p>sanguito</p>
+          <p>chocolate</p>
+          <p>suspiro</p>
+          <p>mazamorras</p>
+
+
+
         </div>
-        </div>
+
+
       </div>
     </div>
     <div class="container-fluid">
