--- a/css/main.css
+++ b/css/main.css
@@ -2,15 +2,19 @@
   margin: 0;
   padding: 0;
   font-family: 'Courgette', cursive;
-  color:black;
+
 }
 
 body{
     background-color: #2b2b2b;
 }
+a{
+  text-decoration: none;
+}
 .line{
   outline: 1px solid red;
 }
+/* vista splash*/
 .splash{
   text-align: center;
   background-color: #2b2b2b;
@@ -32,9 +36,10 @@ img[alt="gif"]{
   width: 50%;
 }
 
-.welcome{
+.white{
   color: white;
   margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
 /*mapa*/
@@ -53,11 +58,15 @@ img[alt="gif"]{
   border: 2px solid #bd7132;
   border-radius: 3px;
   height: 30vh;
-
   margin-bottom: 1rem;
   margin-left: 2rem;
 }
-
-.ocultar{
+/*mensaje de ayuda*/
+.message {
   display: none;
+  color:white;
+  width: 50%;
+  border: 1px solid white;
+  border-radius: 10px;
+  margin-bottom: 1rem;
 }
