incorporando evento click a los restaurantes

--- a/css/main.css
+++ b/css/main.css
@@ -70,3 +70,14 @@ img[alt="gif"]{
   border-radius: 10px;
   margin-bottom: 1rem;
 }
+
+.shadow{
+  border: 1px solid;
+  padding: 10px;
+  box-shadow: 5px 10px #bd7132;
+  content: 'delicioso';
+}
+
+.mes{
+  
+}
