mejorando vista splash

--- a/css/main.css
+++ b/css/main.css
@@ -7,20 +7,25 @@
 
 
 body {
-  background-color: #2b2b2b;
+  background-color:#e64e51;
+}
+@keyframes fadein {
+  from {opacity: 1;}
+  to {opacity: 0.3;}
 }
 
 .splash {
-  background-color: #2b2b2b;
+  /* background-color: #2b2b2b;*/
+  background-image: url(../assets/img/fondo.jpg);
+  background-size: cover;
+  background-position: top;
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   justify-content: center;
-  animation: colorchange 3s;
-  -webkit-animation: colorchange 3s;
+  animation: fadein 1.5s;
   animation-iteration-count: infinite;
-  animation-direction: alternate;
   z-index: 9999;
 }
 
@@ -32,16 +37,19 @@ body {
 .map {
   width: 100%;
   height: 40vh;
-  border: 3px solid #f57f17;
+  border: 3px solid white;
+  border-radius: 2rem;
+  color: black;
 }
 
 
 .ubication iframe {
-  border: 3px solid #f57f17;
+  border: 3px solid white;
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-bottom: 1em;
+  color: black;
 }
 
 .place-container img {
@@ -52,11 +60,21 @@ body {
 }
 
 .place {
-  width: 100%;
+  width: 80%;
   position: relative;
+  border: 3px solid white;
+  margin-bottom: 2rem;
+  border-radius: 2rem;
+}
+.place img{
+    border-radius: 2rem;
+}
+.place img:hover{
+  border-radius: 50%;
 }
 
 .title-place {
+  border-radius: 2rem;
   width: 100%;
   height: 30vh;
   position: absolute;
@@ -86,4 +104,14 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+@media (min-width: 992px){
+  .splash{
+    background-image: url(../assets/img/fondo2.jpg);
+    background-repeat: no-repeat;
+  }
+  .splash h1{
+    margin-bottom: 35rem;
+  }
 }
