--- a/css/main.css
+++ b/css/main.css
@@ -7,11 +7,18 @@
 
 
 body {
-  background-color: #2b2b2b;
+  /*background-color: #f4e6e9;*/
+  color: #f44b73;
+  background-image: url(../assets/img/fondo8.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .splash {
-  background-color: #2b2b2b;
+  background-image: url(../assets/img/fondo2.jfif);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100%;
   height: 100%;
   position: fixed;
@@ -23,21 +30,24 @@ body {
   animation-direction: alternate;
   z-index: 9999;
 }
-
-
+.splash h1{
+    margin-bottom: 7em;
+}
 .principal-container{
   display: none;
 }
 
+/* mapa en la sección principal*/
 .map {
   width: 100%;
   height: 40vh;
-  border: 3px solid #f57f17;
+  border: 3px solid #f44b73;
+  border-radius: 3rem;
 }
 
-
+/* mapa para el modal*/
 .ubication iframe {
-  border: 3px solid #f57f17;
+  border: 3px solid #f44b73;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -46,16 +56,21 @@ body {
 
 .place-container img {
   width: 100%;
-  object-fit: cover;
   height: 60vh;
-  object-position: center;
 }
-
+h2{
+  font-size: 3rem;
+  margin-top: 8rem;
+}
 .place {
   width: 100%;
   position: relative;
+  margin-bottom: 2rem;
 }
-
+.place img{
+  border: 3px solid #f44b73;
+  border-radius: 3rem;
+}
 .title-place {
   width: 100%;
   height: 30vh;
@@ -65,10 +80,11 @@ body {
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.5);
-  color: white;
+  color: #f44b73;
   font-size: 2em;
   opacity: 0;
-  transition: opacity 0.5s linear;
+  transition: opacity 0.4s linear;
+  border-radius: 3rem;
 }
 
 .modal {
@@ -86,4 +102,18 @@ body {
   display: flex;
   align-items: center;
   flex-direction: column;
+}
+
+@media (min-width: 992px){
+  body{
+    background-image: url(../assets/img/fondo9.jpg);
+}
+.splash {
+    background-image: url(../assets/img/fondo9.png);
+}
+.splash h1{
+  margin-bottom: 9em;
+
+}
+
 }
