--- a/css/main.css
+++ b/css/main.css
@@ -7,20 +7,6 @@
 
 
 body {
-<<<<<<< HEAD
-  background-color:#e64e51;
-}
-@keyframes fadein {
-  from {opacity: 1;}
-  to {opacity: 0.3;}
-}
-
-.splash {
-  /* background-color: #2b2b2b;*/
-  background-image: url(../assets/img/fondo.jpg);
-  background-size: cover;
-  background-position: top;
-=======
   /*background-color: #f4e6e9;*/
   color: #f44b73;
   background-image: url(../assets/img/fondo8.jpg);
@@ -33,14 +19,15 @@ body {
   background-image: url(../assets/img/fondo2.jfif);
   background-repeat: no-repeat;
   background-size: cover;
->>>>>>> adad0095ba0a7792280127d86bcb5ff910b80d77
   width: 100%;
   height: 100%;
   position: fixed;
   top: 0;
   justify-content: center;
-  animation: fadein 1.5s;
+  animation: colorchange 3s;
+  -webkit-animation: colorchange 3s;
   animation-iteration-count: infinite;
+  animation-direction: alternate;
   z-index: 9999;
 }
 .splash h1{
@@ -54,28 +41,17 @@ body {
 .map {
   width: 100%;
   height: 40vh;
-<<<<<<< HEAD
-  border: 3px solid white;
-  border-radius: 2rem;
-  color: black;
-=======
   border: 3px solid #f44b73;
   border-radius: 3rem;
->>>>>>> adad0095ba0a7792280127d86bcb5ff910b80d77
 }
 
 /* mapa para el modal*/
 .ubication iframe {
-<<<<<<< HEAD
-  border: 3px solid white;
-=======
   border: 3px solid #f44b73;
->>>>>>> adad0095ba0a7792280127d86bcb5ff910b80d77
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-bottom: 1em;
-  color: black;
 }
 
 .place-container img {
@@ -87,28 +63,15 @@ h2{
   margin-top: 8rem;
 }
 .place {
-  width: 80%;
+  width: 100%;
   position: relative;
-<<<<<<< HEAD
-  border: 3px solid white;
-  margin-bottom: 2rem;
-  border-radius: 2rem;
-}
-.place img{
-    border-radius: 2rem;
-}
-.place img:hover{
-  border-radius: 50%;
-=======
   margin-bottom: 2rem;
 }
 .place img{
   border: 3px solid #f44b73;
   border-radius: 3rem;
->>>>>>> adad0095ba0a7792280127d86bcb5ff910b80d77
 }
 .title-place {
-  border-radius: 2rem;
   width: 100%;
   height: 30vh;
   position: absolute;
@@ -142,15 +105,6 @@ h2{
 }
 
 @media (min-width: 992px){
-<<<<<<< HEAD
-  .splash{
-    background-image: url(../assets/img/fondo2.jpg);
-    background-repeat: no-repeat;
-  }
-  .splash h1{
-    margin-bottom: 35rem;
-  }
-=======
   body{
     background-image: url(../assets/img/fondo9.jpg);
 }
@@ -162,5 +116,4 @@ h2{
 
 }
 
->>>>>>> adad0095ba0a7792280127d86bcb5ff910b80d77
 }
